# Self_healing

./: .env.example  .gitignore  =0.24.0  =0.80.0  AI Log Analyzer.spec  LICENSE  README.md  Test.spec  build_app.bat  build_app.sh  cli.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml
agents/: __init__.py  classifier.py  code_context.py  context_extractor.py  error_filter.py  log_reader.py  patch_generator.py  severity.py  solution_generator.py  validator.py
prompts/: __init__.py  prompts.py
rag/: __init__.py  memory_store.py  retriever.py  vector_store.py
tests/: test_agents.py
ui/: app.py  app_flet.py
utils/: __init__.py  file_scanner.py  llm_client.py  log_monitor.py  logger.py  parser.py  patch_applier.py
workflows/: __init__.py  graph.py
