[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-log-error-analyzer"
version = "1.0.0"
description = "AI-Powered Log Error Analyzer and Auto-Solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-debugger = "main:main"

[tool.setuptools]
packages = ["agents", "utils", "workflows", "prompts", "rag", "ui"]
py-modules = ["main", "config"]
